--- a/templates/opening1.html
+++ b/templates/opening1.html
@@ -15,7 +15,7 @@
 			<div class="col">
 				<h1>Amazon Product Review Analysis</h1>
 				<br>
-				<p>Find review for the product you want to buy.</p>
+				<p>Find review for the product you want to buy on amazon.</p>
 			</div>
 		
 
