--- a/templates/opening1.html
+++ b/templates/opening1.html
@@ -27,7 +27,7 @@
 				</div>
 
 				<div class="card card2">
-					<h4>Product Search</a></h4>
+					<h4>Product Search (Not Available)</a></h4>
 					<!--<p>Treatment and some medicines will be suggested for your disease/condition.</p>-->
 				</div>
 
